# native_lib_template

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/leondevlifelog/native_lib_example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/leondevlifelog/native_lib_example/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/leondevlifelog/native_lib_example/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativeLib/: build.gradle  run_native.bat
nativeLib/src/androidTest/java/com/github/leondevlifelog/nativelib/: ExampleInstrumentedTest.kt
nativeLib/src/main/: AndroidManifest.xml
nativeLib/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  test_hello.cpp  test_hello.h
nativeLib/src/main/cpp/boost/: CMakeLists.txt
nativeLib/src/main/java/com/github/leondevlifelog/nativelib/: NativeLib.kt
nativeLib/src/test/java/com/github/leondevlifelog/nativelib/: ExampleUnitTest.kt
